tweak custom select (hide arrows on IE)

--- a/src/components/form/customselect.less
+++ b/src/components/form/customselect.less
@@ -41,6 +41,11 @@
         padding: 0 3.3rem 0 .5rem;
         width: 100%;
 
+        &::-ms-expand {
+            // hide arrow in IE
+            display: none;
+        }
+
         &:active,
         &:focus {
             border: 0;
