--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -1,14 +1,14 @@
 <div class="p-3 flx">
     <p class="flx-grow">
-        <a class="tdr-none c-base-15" href="{{ site.github.url }}/">
-            <img class="h-2 pos-relative pos-t-2" src="{{ site.github.url }}/assets/img/logo-yoi-small.svg" />
-            <span class="fs-2 fw-bold pos-relative pos-b-2 pos-l-5">Yoi</span>
+        <a class="tdr-none c-base-10" href="{{ site.github.url }}/">
+            <img class="h-2 val-t" src="{{ site.github.url }}/assets/img/logo-yoi.svg" />
+            <span class="fs-2 val-t m--visible hidden">Yoi Frontend Library</span>
         </a>
     </p>
     <p class="flx-grow al-r fs-0">
         {% if page.title == 'Index' %}
             <a href="{{ site.github.url }}/start/" class="btn btn--subtle m-l-2">Documentation</a>
-            <a href="{{ site.github.zip_url }}" class="btn btn--flat m-l-2">Download</a>
+            <a href="{{ site.github.zip_url }}" class="btn btn--subtle m-l-2">Github</a>
         {% else %}
             {% if jekyll.environment == "production" %}
                 <form class="pos-relative">
