--- a/src/components/linklist/linklist.less
+++ b/src/components/linklist/linklist.less
@@ -6,7 +6,7 @@
 .linkList {
     .mixin-defaultBorderRadius;
     border: @color-base-23 1px solid;
-    font-size: 1.3rem;
+    // font-size: 1.3rem;
 }
 
 // elements
@@ -111,16 +111,16 @@
 
 // large
 
-.linkList--large {
+// .linkList--large {
 
-    font-size: 1.5rem;
+//     font-size: 1.5rem;
 
-    .linkList__link {
-        line-height: 2rem;
-        padding: 1rem 1.25rem;
-    }
+//     .linkList__link {
+//         line-height: 2rem;
+//         padding: 1rem 1.25rem;
+//     }
 
-}
+// }
 
 // icon/arrow on the left
 
