--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -15,11 +15,11 @@
     cursor: default;
     display: inline-block;
     font-family: @font-sansserif;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
-    height: 2.5rem;
-    line-height: 2.3rem;
-    padding: 0 1rem;
+    height: 2rem;
+    line-height: ~'calc(2rem - 2px)';
+    padding: 0 ~'calc(.75rem - 2px)';
     position: relative;
     text-align: center;
     vertical-align: middle;
@@ -49,11 +49,12 @@
     a:link&,
     a:visited& {
         text-decoration: none;
-    }
-        
-    & > input[type="submit"] {
         cursor: pointer;
     }
+
+    // & > input[type="submit"] {
+    //     cursor: pointer;
+    // }
 
     // interactive states
 
@@ -65,7 +66,7 @@
     &.is--active {
         box-shadow: none;
     }
-    
+
     &:focus,
     &.is--focus,
     &.is--focus:hover {
@@ -78,7 +79,7 @@
         cursor: default;
         opacity: .3;
     }
-    
+
     // icons
 
     .icon {
@@ -130,13 +131,13 @@
     .hidden + .icon,
     .icon:only-child {
         margin-left: -1rem;
-        width: 2.3rem;
+        width: 2.75rem;
     }
 
     &.btn--small .hidden + .icon,
     &.btn--small .icon:only-child {
         margin-left: -.4rem;
-        width: 1.6rem;
+        width: 2rem;
     }
 
     &.btn--medium .hidden + .icon,
@@ -151,9 +152,9 @@
         margin-left: -2rem;
         width: 4rem;
     }
-    
+
     // standard button
-    
+
     .constr-btn(
         @bgGradientTopColor: @color-base-24,
         @bgGradientBottomColor: @color-base-23,
@@ -180,23 +181,24 @@
 // size
 
 .btn--small {
-    font-size: 1.2rem;
-    line-height: 1.9rem;
-    padding: 0 0.5rem;
-    height: 2rem;
+    font-size: .88rem;
+    line-height: ~'calc(1.5rem - 2px)';
+    padding: 0 ~'calc(.5rem - 2px)';
+    height: 1.5rem;
 }
 
 .btn--medium {
-    font-size: 1.2rem;
-    line-height: 2.9rem;
-    height: 3rem;
+    font-size: 1.13rem;
+    line-height: ~'calc(2.5rem - 2px)';
+    height: 2.5rem;
+    padding: 0 ~'calc(1rem - 2px)';
 }
 
 .btn--large {
-    font-size: 1.5rem;
-    height: 4rem;
-    line-height: 3.8rem;
-    padding: 0 1.9rem;
+    font-size: 1.25rem;
+    height: 3rem;
+    line-height: ~'calc(3rem - 2px)';
+    padding: 0 ~'calc(1.5rem - 2px)';
 }
 
 // colors
@@ -325,18 +327,18 @@
 
 .btn--rounded {
 
-    border-radius: 1.2rem;
+    border-radius: 1rem;
 
     &.btn--small {
-        border-radius: 1rem;
+        border-radius: .75rem;
     }
 
     &.btn--medium {
-        border-radius: 1.5rem;
+        border-radius: 1.25rem;
     }
 
     &.btn--large {
-        border-radius: 2rem;
+        border-radius: 1.5rem;
     }
 
 }
@@ -356,7 +358,7 @@
 
     .btn {
         border-radius: 0;
-        margin-left: -0.1rem;
+        margin-left: -1px;
     }
 
     .btn:first-child {
