--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -1,7 +1,40 @@
 /** button.less */
 
-// block
-// =====
+// specs / constants
+// =================
+
+@button-borderwidth    : 1px;
+
+@button-s-fontsize     : .88rem;
+@button-s-height       : 1.5rem;
+@button-s-paddingBase  : .5rem;
+@button-s-lineheight   : ~'calc(@{button-s-height} - @{button-borderwidth} * 2)';
+@button-s-xpadding     : ~'calc(@{button-s-paddingBase} - @{button-borderwidth})';
+@button-s-xpull        : ~'calc((@{button-s-paddingBase} - @{button-borderwidth}) * -1)';
+
+@button-fontsize       : 1rem;
+@button-height         : 2rem;
+@button-paddingBase    : .75rem;
+@button-lineheight     : ~'calc(@{button-height} - @{button-borderwidth} * 2)';
+@button-xpadding       : ~'calc(@{button-paddingBase} - @{button-borderwidth})';
+@button-xpull          : ~'calc((@{button-paddingBase} - @{button-borderwidth}) * -1)';
+
+@button-l-fontsize     : 1.13rem;
+@button-l-height       : 2.5rem;
+@button-l-paddingBase  : 1rem;
+@button-l-lineheight   : ~'calc(@{button-l-height} - @{button-borderwidth} * 2)';
+@button-l-xpadding     : ~'calc(@{button-l-paddingBase} - @{button-borderwidth})';
+@button-l-xpull        : ~'calc((@{button-l-paddingBase} - @{button-borderwidth}) * -1)';
+
+@button-xl-fontsize    : 1.25rem;
+@button-xl-height      : 3rem;
+@button-xl-paddingBase : 1.5rem;
+@button-xl-lineheight  : ~'calc(@{button-xl-height} - @{button-borderwidth} * 2)';
+@button-xl-xpadding    : ~'calc(@{button-xl-paddingBase} - @{button-borderwidth})';
+@button-xl-xpull       : ~'calc((@{button-xl-paddingBase} - @{button-borderwidth}) * -1)';
+
+// block (base styles for all buttons)
+// ===================================
 
 .btn {
 
@@ -9,17 +42,17 @@
     .mixin-defaultBorderRadius;
     .mixin-userSelectNone;
     background-clip: padding-box;
-    border-width: 1px;
+    border-width: @button-borderwidth;
     border-style: solid;
     box-sizing: border-box;
     cursor: default;
     display: inline-block;
     font-family: @font-sansserif;
-    font-size: 1rem;
+    font-size: @button-fontsize;
     font-weight: bold;
-    height: 2rem;
-    line-height: ~'calc(2rem - 2px)';
-    padding: 0 ~'calc(.75rem - 2px)';
+    height: @button-height;
+    line-height: @button-lineheight;
+    padding: 0 @button-xpadding;
     position: relative;
     text-align: center;
     vertical-align: middle;
@@ -52,10 +85,6 @@
         cursor: pointer;
     }
 
-    // & > input[type="submit"] {
-    //     cursor: pointer;
-    // }
-
     // interactive states
 
     &:hover {
@@ -80,79 +109,6 @@
         opacity: .3;
     }
 
-    // icons
-
-    .icon {
-
-        height: 100%;
-        overflow: hidden;
-        position: relative;
-        vertical-align: top;
-
-        svg {
-            left: 50%;
-            position: relative;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-    }
-
-    // icon right, label left
-
-    .icon:last-child {
-        margin-right: -1rem;
-    }
-
-    &.btn--small .icon:last-child {
-        margin-right: -0.4rem;
-    }
-
-    &.btn--large .icon:last-child {
-        margin-right: -1.5rem;
-    }
-
-    // icon left, label right
-
-    .icon:first-child {
-        margin-left: -1rem;
-    }
-
-    &.btn--small .icon:first-child {
-        margin-left: -0.75rem;
-    }
-
-    &.btn--large .icon:first-child {
-        margin-left: -1.5rem;
-    }
-
-    // only icons, hidden or no label
-
-    .hidden + .icon,
-    .icon:only-child {
-        margin-left: -1rem;
-        width: 2.75rem;
-    }
-
-    &.btn--small .hidden + .icon,
-    &.btn--small .icon:only-child {
-        margin-left: -.4rem;
-        width: 2rem;
-    }
-
-    &.btn--medium .hidden + .icon,
-    &.btn--medium .icon:only-child {
-        margin-left: -1.2rem;
-        width: 3rem;
-    }
-
-    &.btn--large .hidden + .icon,
-    &.btn--large .icon:only-child {
-        margin-right: -2rem;
-        margin-left: -2rem;
-        width: 4rem;
-    }
-
     // standard button
 
     .constr-btn(
@@ -175,30 +131,133 @@
 
 }
 
+// elements
+// ========
+
+.btn {
+
+    // & > input[type="submit"] {
+    //     cursor: pointer;
+    // }
+
+    .icon {
+        background: rgba(255,0,0,.1);
+
+        height: @button-height;
+        overflow: hidden;
+        position: relative;
+        vertical-align: top;
+        width: @button-height;
+        top: @button-borderwidth * -1;
+    }
+
+    &.btn--small .icon {
+        height: @button-s-height;
+        width: @button-s-height;
+    }
+
+    &.btn--large .icon {
+        height: @button-l-height;
+        width: @button-l-height;
+    }
+
+    &.btn--xlarge .icon {
+        height: @button-xl-height;
+        width: @button-xl-height;
+    }
+
+    // icon right, label left
+
+    &.btn--small .icon:last-child {
+        margin-right: @button-s-xpull;
+    }
+
+    .icon:last-child {
+        margin-right: @button-xpull;
+    }
+
+    &.btn--large .icon:last-child {
+        margin-right: @button-l-xpull;
+    }
+
+    &.btn--xlarge .icon:last-child {
+        margin-right: @button-xl-xpull;
+    }
+
+    // icon left, label right
+
+    &.btn--small .icon:first-child {
+        margin-left: @button-s-xpull;
+    }
+
+    .icon:first-child {
+        margin-left: @button-xpull;
+    }
+
+    &.btn--large .icon:first-child {
+        margin-left: @button-l-xpull;
+    }
+
+    &.btn--xlarge .icon:first-child {
+        margin-left: @button-xl-xpull;
+    }
+
+    // only icons, hidden or no label
+
+    &.btn--small .hidden + .icon,
+    &.btn--small .icon:only-child {
+        margin-left: @button-s-xpull;
+        margin-right: -9px; // 4 + 5
+        left: @button-borderwidth * -1;
+    }
+
+    .hidden + .icon,
+    .icon:only-child {
+        margin-left: @button-xpull;
+        margin-right: -13px; // 8 + 5
+        left: @button-borderwidth * -1;
+    }
+
+    &.btn--large .hidden + .icon,
+    &.btn--large .icon:only-child {
+        left: @button-borderwidth * -1;
+        margin-left: @button-l-xpull;
+        margin-right: -17px; // 12 + 5
+    }
+
+    &.btn--xlarge .hidden + .icon,
+    &.btn--xlarge .icon:only-child {
+        left: @button-borderwidth * -1;
+        margin-left: @button-xl-xpull;
+        margin-right: -25px; // 20 + 5
+    }
+
+}
+
 // modifiers
 // =========
 
 // size
 
 .btn--small {
-    font-size: .88rem;
-    line-height: ~'calc(1.5rem - 2px)';
-    padding: 0 ~'calc(.5rem - 2px)';
-    height: 1.5rem;
-}
-
-.btn--medium {
-    font-size: 1.13rem;
-    line-height: ~'calc(2.5rem - 2px)';
-    height: 2.5rem;
-    padding: 0 ~'calc(1rem - 2px)';
+    font-size: @button-s-fontsize;
+    height: @button-s-height;
+    line-height: @button-s-lineheight;
+    padding: 0 @button-s-xpadding;
 }
 
 .btn--large {
-    font-size: 1.25rem;
-    height: 3rem;
-    line-height: ~'calc(3rem - 2px)';
-    padding: 0 ~'calc(1.5rem - 2px)';
+    font-size: @button-l-fontsize;
+    height: @button-l-height;
+    line-height: @button-l-lineheight;
+    padding: 0 @button-l-xpadding;
+}
+
+.btn--xlarge {
+    font-size: @button-xl-fontsize;
+    height: @button-xl-height;
+    line-height: @button-xl-lineheight;
+    padding: 0 @button-xl-xpadding;
 }
 
 // colors
@@ -333,11 +392,11 @@
         border-radius: .75rem;
     }
 
-    &.btn--medium {
+    &.btn--large {
         border-radius: 1.25rem;
     }
 
-    &.btn--large {
+    &.btn--xlarge {
         border-radius: 1.5rem;
     }
 
@@ -389,13 +448,13 @@
         border-radius: 0 (5px * @defaultBorderRadius) (5px * @defaultBorderRadius) 0;
     }
 
-    // medium, rounded
+    // large, rounded
 
-    .btn.btn--medium.btn--rounded:first-child {
+    .btn.btn--large.btn--rounded:first-child {
         border-radius: (7.5px * @defaultBorderRadius) 0 0 (7.5px * @defaultBorderRadius);
     }
 
-    .btn.btn--medium.btn--rounded:last-child {
+    .btn.btn--large.btn--rounded:last-child {
         border-radius: 0 (7.5px * @defaultBorderRadius) (7.5px * @defaultBorderRadius) 0;
     }
 
@@ -453,23 +512,23 @@
         border-radius: 0 0 1rem 1rem;
     }
 
-    // medium, rounded
-
-    .btn.btn--medium.btn--rounded:first-child {
-        border-radius: 1.5rem 1.5rem 0 0;
-    }
-
-    .btn.btn--medium.btn--rounded:last-child {
-        border-radius: 0 0 1.5rem 1.5rem;
-    }
-
     // large, rounded
 
     .btn.btn--large.btn--rounded:first-child {
-        border-radius: 2rem 2rem 0 0;
+        border-radius: 1.5rem 1.5rem 0 0;
     }
 
     .btn.btn--large.btn--rounded:last-child {
+        border-radius: 0 0 1.5rem 1.5rem;
+    }
+
+    // xlarge, rounded
+
+    .btn.btn--xlarge.btn--rounded:first-child {
+        border-radius: 2rem 2rem 0 0;
+    }
+
+    .btn.btn--xlarge.btn--rounded:last-child {
         border-radius: 0 0 2rem 2rem;
     }
 
