--- a/src/components/code/code.less
+++ b/src/components/code/code.less
@@ -5,12 +5,10 @@
 
 code {
     .mixin-defaultBorderRadius;
-    //.mixin-fs-1;
     background: @gray-25;
     color: @purple-13;
     direction: ltr;
     font-family: @font-mono;
-    font-size: .94rem;
     font-style: normal;
     font-weight: normal;
     hyphens: none;
@@ -25,7 +23,6 @@ pre {
     .mixin-defaultBorderRadius;
     background: @gray-25;
     border-bottom-left-radius: 0;
-    font-size: .94rem;
     padding: 1rem;
 }
 
@@ -37,8 +34,8 @@ pre code {
 // code example
 
 .code__example {
+    .mixin-defaultBorderRadius;
     background: @color-white;
-    border-radius: 2px;
     border: @gray-23 1px solid;
 }
 
@@ -48,14 +45,14 @@ pre code {
 }
 
 .code__example pre {
-    padding: 0 2rem 2rem 2rem;
+    padding: 0 1rem 1rem 1rem;
 }
 
 .code__example pre,
 .code__example code {
     background: transparent;
-    font-size: 1.4rem;
-    line-height: 2rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 
 .code__source {
@@ -65,9 +62,10 @@ pre code {
 .code__source--truncated::before,
 .code__source::after {
 
-    // gradients to cut overflowing text on right and bottom
+    // gradients to cut overflowing
+    // text on right and bottom
 
-    bottom: 4rem;
+    bottom: 2rem;
     content: ' ';
     display: block;
     position: absolute;
@@ -76,28 +74,30 @@ pre code {
 
 .code__source--truncated::before {
 
-    // gradient to cut overflowing text on bottom
+    // gradient to cut overflowing
+    // text on bottom
 
     background: linear-gradient(@color-transparent, @color-white);
-    height: 2.5rem;
-    left: 2rem;
-    right: 2rem;
+    height: 1.25rem;
+    left: 1rem;
+    right: 1rem;
 
 }
 
 .code__source::after {
 
-    // gradient to cut overflowing text on right
+    // gradient to cut overflowing
+    // text on right
 
     background: linear-gradient(to right, @color-transparent, @color-white);
-    right: 2rem;
+    right: 1rem;
     top: 0;
-    width: 2.5rem;
+    width: 1.25rem;
 
 }
 
 .code__example .code__result {
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .code__example.tabs pre {
@@ -119,7 +119,7 @@ pre code {
 // copy button
 
 .code__copyBtn {
-
+    .mixin-fs-1;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 
@@ -141,6 +141,7 @@ pre code {
 // expand button
 
 .code__expandBtn {
+    .mixin-fs-1;
     border-top-right-radius: 0;
     border-bottom-left-radius: 0;
     position: absolute;
