--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -8,7 +8,7 @@
         {% if jekyll.environment == "development" %}
             <base href="/" />
         {% endif %}
-        {# favicon #}
+        <!-- favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -16,9 +16,9 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#eb514f" />
         <meta name="msapplication-TileColor" content="#000000" />
         <meta name="theme-color" content="#ffffff" />
-        {# styles #}
+        <!-- styles -->
         <link href="{{ site.github.url }}/assets/css/yoi.css" rel="stylesheet" />
-        {# docsearch #}
+        <!-- docsearch -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
         <style>
             .ds-dropdown-menu {
