--- a/docs/_includes/metafooter.html
+++ b/docs/_includes/metafooter.html
@@ -35,8 +35,7 @@
     {% endif %}
 {% endif %}
 <div class="b-t m-t-8 p-t-4 al-r">
-    <a class="btn btn--medium btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
-        <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-019-s" yoi-icon />
+    <a class="btn btn--small btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
         <span>Edit this page</span>
     </a>
 </div>
