remove linklist modifiers

--- a/src/components/linklist/linklist.less
+++ b/src/components/linklist/linklist.less
@@ -5,8 +5,8 @@
 
 .linkList {
     .mixin-defaultBorderRadius;
+    .mixin-fs-2;
     border: @color-base-23 1px solid;
-    // font-size: 1.3rem;
 }
 
 // elements
@@ -59,143 +59,4 @@
     position: absolute;
     top: 0;
     width: 2px;
-}
-
-// icons
-
-.linkList--arrowsLeft,
-.linkList--arrowsLeftDown,
-.linkList--arrowsLeftUp,
-.linkList--arrowsRight,
-.linkList--arrowsRightDown,
-.linkList--arrowsRightUp {
-
-    .linkList__link::after {
-        content: ' ';
-        height: 2.4rem;
-        margin-top: -1.2rem;
-        position: absolute;
-        top: 50%;
-        width: 2.4rem;
-    }
-
-}
-
-// modifiers
-// =========
-
-// dark
-
-.linkList--dark {
-
-    background-color: @color-base-10;
-    border-color: @color-base-8;
-
-    .linkList__item {
-        border-color: @color-base-9;
-    }
-
-    .linkList__link {
-        color: @color-base-25;
-    }
-
-    .linkList__link:hover {
-        background: @color-base-9;
-    }
-
-    .is--active .linkList__link::before {
-        background: @color-primary-23;
-    }
-
-}
-
-// large
-
-// .linkList--large {
-
-//     font-size: 1.5rem;
-
-//     .linkList__link {
-//         line-height: 2rem;
-//         padding: 1rem 1.25rem;
-//     }
-
-// }
-
-// icon/arrow on the left
-
-.linkList--arrowsLeft,
-.linkList--arrowsLeftUp,
-.linkList--arrowsLeftDown {
-
-    .linkList__link {
-        padding-left: 2.5rem;
-    }
-
-    &.linkList--large .linkList__link {
-        padding-left: 3.5rem;
-    }
-
-    // icon position
-
-    .linkList__link::after {
-        left: 0;
-    }
-
-    &.linkList--large .linkList__link::after {
-        left: .5rem;
-    }
-
-}
-
-// icon/arrow on the right
-
-.linkList--arrowsRight,
-.linkList--arrowsRightUp,
-.linkList--arrowsRightDown {
-
-    .linkList__link {
-        padding-right: 2.5rem;
-    }
-
-    &.linkList--large .linkList__link {
-        padding-right: 3.5rem;
-    }
-
-    // icon position
-
-    .linkList__link::after {
-        right: 0;
-    }
-
-    &.linkList--large .linkList__link::after {
-        right: .5rem;
-    }
-
-}
-
-// icons/arrows pointing left
-
-.linkList--arrowsLeft .linkList__link::after {
-    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-20);
-}
-
-// icons/arrows pointing right
-
-.linkList--arrowsRight .linkList__link::after {
-    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-20);
-}
-
-// icons/arrows pointing up
-
-.linkList--arrowsLeftUp .linkList__link::after,
-.linkList--arrowsRightUp .linkList__link::after {
-    .mixin-icon-bg(@id: 'icon-010-s', @width: 24, @height: 24, @fillColor: @color-base-20);
-}
-
-// icons/arrows pointing down
-
-.linkList--arrowsLeftDown .linkList__link::after,
-.linkList--arrowsRightDown .linkList__link::after {
-    .mixin-icon-bg(@id: 'icon-009-s', @width: 24, @height: 24, @fillColor: @color-base-20);
 }
